samples/_failures_safe/1761369897_107596_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_055ce357.c: In function ‘state_to_string’:
./samples/SAFE/__tmp_055ce357.c:144:25: error: missing terminating " character
  144 |         default: return "
      |                         ^
./samples/SAFE/__tmp_055ce357.c:144:9: error: expected expression at end of input
  144 |         default: return "
      |         ^~~~~~~
./samples/SAFE/__tmp_055ce357.c:144:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_055ce357.c:144:9: error: expected declaration or statement at end of input
